# astock

./: .gitignore  AGENTS.md  BRANCH_REPORT.md  BUSINESS_MODEL.md  CLAUDE.md  DECISIONS.md  DECISION_COCKPITS.md  FACTOR_TAXONOMY.md  GUARDS.md  Implement.md  LESSONS.md  LOOP_CLOSURE_TASK.md  LOOP_ENGINEERING.md  LOOP_QUICK_CALLS.md  MINIPROGRAM_ARCHITECTURE.md  MULTI_AGENT.md  MULTI_TENANT_PAYMENT.md  OPERATING_COST.md  ROADMAP.md  RUNBOOK.md  SPEC(3).md  SPEC(4).md  SPEC(6).md  SPEC(7).md  SPEC.md  STATUS.md  TASKS.md  WEB_DESIGN(2).md  WEB_DESIGN.md  WORKFLOW.md  project.config.json  slide-outline.md  回测执行现实核对清单.md
factor_research/: README.md  conftest.py  evolve.py  ic_decay_analysis.py  ic_decay_plot.py  pyproject.toml  requirements.txt  run_daily.py  strategy_lake.py  strategy_registry.py  strategy_versions.json  test_d_le_sc.py  test_engine.py  test_hq_momentum.py  test_large_cap.py  test_load_lake.py  validate_final.py
factor_research/api/: MODULE_STATUS.md  __init__.py  main.py
factor_research/app_config/: MODULE_STATUS.md  __init__.py  holdout_boundary_history.jsonl  llm_pricing.yaml  log.py  miniapp_settings.yaml  settings.py  settings.yaml
factor_research/apps/: MODULE_STATUS.md  agent_cli.py  contribution_dashboard.py  factory_cli.py  portfolio_cli.py  stock_cli.py
factor_research/capacity/: MODULE_STATUS.md  __init__.py  crowding_score.py  decay_monitor.py  dollar_capacity.py  live_vs_backtest_gap.py  participation_rate.py
factor_research/config/: __init__.py  settings.py
factor_research/contracts/: MODULE_STATUS.md  __init__.py  agent_control.py  evidence.py  models.py  views.py
factor_research/core/: MODULE_STATUS.md  __init__.py  backtest.py  cost_impact.py  cost_tiers.py  engine.py  hedged_portfolio.py  strategy_spec.py
factor_research/data_lake/: MODULE_STATUS.md  README.md  _manifest.json
factor_research/deployments/: MODULE_STATUS.md  production.json
factor_research/docs/: MODULE_STATUS.md  PHASE1_CHECKLIST.md  REMAINING_STANDARDIZATION.md  agent_control_plane_report.md  agent_operating_model.md  automation_tasks.md  benchmark_report.md  cost_model.md  data_dimensions.md  data_infrastructure.md  engine_usage.md  evolutionary_acceleration_roadmap.md  global_data_infrastructure.md  naming_taxonomy.md  ontology_glossary.md  ontology_refactor_migration_report.md  reproduce_amihud_illiq_best.md  reproduce_best_strategy.md  strategy_evaluation.md  strategy_system_pruning_inventory.md  trust_calibration_banner_spec.md
factor_research/engine/: MODULE_STATUS.md  __init__.py  backtest.py  composer.py  factor_analysis.py  factor_composer.py  fetch.py  metrics.py  neutralize.py  portfolio.py  regime.py  signal_factory.py  strategy_composer.py  universe.py
factor_research/execution/: MODULE_STATUS.md  __init__.py  _deprecated_order_simulator.py  broker_adapter.py  order_simulator.py  tca.py
factor_research/factor_store/: MODULE_STATUS.md  PANELS_CACHE.md  __init__.py  core_backfill.py  scoring.py  store.py
factor_research/factors/: MODULE_STATUS.md  alpha101.py  amihud_catalog.py  autoresearch_dsl.py  capital_flow.py  composite.py  d_le_sc.py  earnings.py  expectation_gap.py  flow.py  fundamental.py  fundamental_quality.py  gap_reversal.py  hq_momentum.py  illiquidity_components.py  industry_prosperity.py  large_cap.py  liquidity.py  market_stress.py  microstructure.py  momentum.py  northbound.py  ohlc.py  pledge.py  price_action.py  quality.py  registry.py  roc_yc.py  shareholder.py  small_cap.py  utils.py  value.py  veto.py
factor_research/factory/: MODULE_STATUS.md  __init__.py  calibrate_incubation.py  evaluator.py  evolve_incubation.py  incubation.py  islands.py  niches.py  nsga2.py  objectives.py  pareto.py  (+10 more)
(+1244 files in other folders)
