[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "astcok-factor-research"
version = "0.0.0"
description = "A-stock factor research and product API workspace"
requires-python = ">=3.11"
dependencies = [
  "pandas==3.0.3",
  "numpy==2.2.6",
  "pyarrow==24.0.0",
  "scipy==1.17.1",
  "fastapi==0.136.3",
  "uvicorn[standard]==0.49.0",
  "pydantic==2.13.4",
  "duckdb==1.5.3",
  "baostock==0.9.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
  "mypy>=1.10",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = [
  "api*",
  "app_config*",
  "capacity*",
  "contracts*",
  "core*",
  "engine*",
  "execution*",
  "factor_store*",
  "factors*",
  "factory*",
  "knowledge*",
  "lake*",
  "metasearch*",
  "model_risk*",
  "portfolio*",
  "reporting*",
  "research_ledger*",
  "research_toolkit*",
  "scripts*",
  "services*",
  "strategies*",
  "tests*",
  "workflow*",
]
exclude = ["data*", "data_lake*", "docs*", "logs*", "paper*", "results*", "reports*", "scratch*", "web*"]

[tool.pytest.ini_options]
pythonpath = ["."]
# tests/ 全量 + 根目录唯一的 pytest 风格模块 test_engine.py
testpaths = ["tests", "test_engine.py"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
