[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "astcok-factor-research"
version = "0.0.0"
description = "A-stock factor research and product API workspace"
requires-python = ">=3.11"
dependencies = [
  "pandas==3.0.3",
  "numpy==2.2.6",
  "pyarrow==24.0.0",
  "scipy==1.17.1",
  "fastapi==0.136.3",
  "uvicorn[standard]==0.49.0",
  "pydantic==2.13.4",
  "duckdb==1.5.3",
  "baostock==0.9.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
  "mypy>=1.10",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = [
  "api*",
  "app_config*",
  "capacity*",
  "contracts*",
  "core*",
  "engine*",
  "execution*",
  "factor_store*",
  "factors*",
  "factory*",
  "knowledge*",
  "lake*",
  "metasearch*",
  "model_risk*",
  "portfolio*",
  "reporting*",
  "research_ledger*",
  "research_toolkit*",
  "scripts*",
  "services*",
  "strategies*",
  "tests*",
  "workflow*",
]
exclude = ["data*", "data_lake*", "docs*", "logs*", "paper*", "results*", "reports*", "scratch*", "web*"]

[tool.pytest.ini_options]
pythonpath = ["."]
# tests/ 全量 + 根目录唯一的 pytest 风格模块 test_engine.py
testpaths = ["tests", "test_engine.py"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
# 归档研究脚本为冻结历史(含 py312 语法与死代码),不进 lint;其余目录由 .gitignore 天然排除
exclude = ["scripts/research/archive/**"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.lint.per-file-ignores]
# scripts 与入口脚本的 sys.path 引导边界:ruff 无法跨 sys.path.insert 安全排序,
# I001 残余为结构性形态(研究脚本准入形态),非懒惰。
"scripts/**" = ["I001"]
"run_daily.py" = ["I001"]
"strategy_lake.py" = ["I001"]
"strategy_registry.py" = ["I001"]
"validate_final.py" = ["I001"]
"lake/update.py" = ["I001"]
# prev_row 引用未定义(存量逻辑 bug,一跑就炸):修复需先理解研究意图,
# 另立任务;登记豁免防扩散,清零前不得新增。
"scripts/research/cost_slippage_sensitivity.py" = ["F821"]
# 测试惯用法豁免:except 分支里 assert False(到即失败)与 pytest.raises(Exception)
# 粗匹配是测试语义需要,非生产路径盲断。
"tests/**" = ["B011", "B017"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
